add adptive up to 768 for index.html

--- a/#src/sass/_media.sass
+++ b/#src/sass/_media.sass
@@ -1,6 +1,6 @@
-// @import 'media/1300'
-// @import 'media/1200'
-// @import 'media/992'
-// @import 'media/768'
-// @import 'media/576'
-// @import 'media/480'
+@import 'media/1300'
+@import 'media/1200'
+@import 'media/992'
+@import 'media/768'
+@import 'media/576'
+@import 'media/480'
