--- a/#src/sass/media/_768.sass
+++ b/#src/sass/media/_768.sass
@@ -9,4 +9,10 @@
     left: 0
     width: 100%
     z-index: 7
-    background-color: $black
+    background-color: rgba($black, 0.9)
+    filter: drop-shadow(5px 0px 15px rgba($black, 0.7))
+    &__container
+      padding: 0 30px
+
+  .header__lang
+    display: none
