--- a/#src/sass/components/_nav.sass
+++ b/#src/sass/components/_nav.sass
@@ -1,12 +1,12 @@
 .menu
   &__body
-    margin-top: -5px
+    // margin-top: -5px
     @media (max-width: 768px)
       position: fixed
       top: 0
       right: -100%
       width: 100%
-      height: 100%
+      height: 100vh
       padding: 150px 30px 50px 70px
       background-color: rgba($black,0.9)
       overflow: auto
@@ -18,7 +18,7 @@
         right: -100%
         width: 100%
         height: 116px
-        background-color: rgba($white,0.9)
+        background-color: rgba($black,0.9)
         transition: right 0.5s ease 0s
         z-index: 2
     &._active
@@ -30,7 +30,7 @@
     flex-wrap: wrap
     @media (max-width: 768px)
       flex-direction: column
-      align-items: flex-start
+      align-items: flex-end
 
   &__item
     position: relative
@@ -58,11 +58,12 @@
       color: $text
     @media (max-width: 768px)
       margin-bottom: 40px
-      font-weight: 800
-      font-size: 18px
+      font-weight: 600
+      font-size: 26px
+      line-height: 1.2
       &:not(:last-child)
-        margin-right: 0
-        margin-bottom: 10px
+        margin-right: 0 !important
+        margin-bottom: 20px
 
   &__icon
     display: none
