--- a/#src/sass/media/_1300.sass
+++ b/#src/sass/media/_1300.sass
@@ -1,1 +1,19 @@
 @media ( max-width:1300px )
+  .features__boxes
+    padding-right: 60px
+    &::before
+      right: 0
+  .about__boxes
+    padding-right: 60px
+    &::before
+      top: -94px
+      bottom: 75px
+      right: 0
+      width: auto
+      height: auto
+    &::after
+      right: 0
+
+@media ( max-width:1250px )
+  .header__ver
+    padding: 120px 0px 120px 74px
