--- a/#src/sass/style.sass
+++ b/#src/sass/style.sass
@@ -40,4 +40,4 @@
 // подключение анимации
 @import 'components/animation'
 // подключение стилей для модального окна
-//@import 'media'
+@import 'media'
