done adaptive for index.html + adap. menu

--- a/#src/sass/components/_contacts.sass
+++ b/#src/sass/components/_contacts.sass
@@ -26,7 +26,7 @@
       transition: all 0.3s linear
       margin: 0
       padding: 0
-  &__adress
+  &__phone
     position: relative
     line-height: 160%
     color: #F6F6F6
