--- a/#src/sass/media/_480.sass
+++ b/#src/sass/media/_480.sass
@@ -1,1 +1,9 @@
 @media ( max-width:480px )
+  .first__container
+    padding-top: 35%
+  .first__head
+    font-size: 32px
+    span
+      font-size: 28px
+  .first__btn
+    font-size: 18px
