--- a/#src/sass/components/_hover.sass
+++ b/#src/sass/components/_hover.sass
@@ -12,15 +12,15 @@
   .first__btn:hover
     padding: 20px 40px
     background-color: darken(#EF8354, 5%)
-    filter: drop-shadow(2px 6px 11px rgba($text, 0.7))
+    filter: drop-shadow(px 6px 11px rgba($text, 0.7))
   .contacts__item:hover img
     transform: scale(1.1)
-  .contacts__adress:hover
+  .contacts__phone:hover
     &::before
       width: 100%
   .box-btn:hover
     // padding: 10px 35px
     background-color: darken($text, 5%)
-    filter: drop-shadow(2px 4px 7px rgba($text, 0.7))
+    filter: drop-shadow(2px 4px 10px rgba($text, 0.4))
   .modal__close:hover
     transform: rotate(90deg)
