--- a/#src/sass/media/_768.sass
+++ b/#src/sass/media/_768.sass
@@ -13,6 +13,8 @@
     filter: drop-shadow(5px 0px 15px rgba($black, 0.7))
     &__container
       padding: 0 30px
+    &__logo
+      height: 40px
     &__lang
       justify-content: flex-end
       margin-top: 25px
