change bgc in menu

--- a/#src/sass/media/_768.sass
+++ b/#src/sass/media/_768.sass
@@ -9,7 +9,7 @@
     left: 0
     width: 100%
     z-index: 7
-    background-color: rgba($black, 0.9)
+    background-color: rgba($bgc, 0.9)
     filter: drop-shadow(5px 0px 15px rgba($black, 0.7))
     &__container
       padding: 0 30px
@@ -32,7 +32,7 @@
   .header__lang > .menu__item:first-child::before
     content: none
   .menu__item.current
-    color: lighten($text, 15%)
+    color: $text
   .social__item
     margin-right: 0
     margin-left: 30px
