--- a/#src/sass/components/_nav.sass
+++ b/#src/sass/components/_nav.sass
@@ -8,7 +8,7 @@
       width: 100%
       height: 100vh
       padding: 150px 30px 50px 70px
-      background-color: rgba($black,0.9)
+      background-color: rgba($bgc,0.95)
       overflow: auto
       transition: right 0.5s ease 0s
       &::before
@@ -18,7 +18,7 @@
         right: -100%
         width: 100%
         height: 116px
-        background-color: rgba($black,0.9)
+        background-color: rgba($bgc,0.95)
         transition: right 0.5s ease 0s
         z-index: 2
     &._active
