--- a/biadecor/css/style.css
+++ b/biadecor/css/style.css
@@ -1056,7 +1056,7 @@ input {
     width: 100%;
     height: 100vh;
     padding: 150px 30px 50px 70px;
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(79, 93, 117, 0.95);
     overflow: auto;
     -webkit-transition: right 0.5s ease 0s;
     -o-transition: right 0.5s ease 0s;
@@ -1069,7 +1069,7 @@ input {
     right: -100%;
     width: 100%;
     height: 116px;
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(79, 93, 117, 0.95);
     -webkit-transition: right 0.5s ease 0s;
     -o-transition: right 0.5s ease 0s;
     transition: right 0.5s ease 0s;
@@ -1605,7 +1605,7 @@ input {
     left: 0;
     width: 100%;
     z-index: 7;
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(79, 93, 117, 0.9);
     -webkit-filter: drop-shadow(5px 0px 15px rgba(0, 0, 0, 0.7));
     filter: drop-shadow(5px 0px 15px rgba(0, 0, 0, 0.7));
   }
@@ -1642,7 +1642,7 @@ input {
     content: none;
   }
   .menu__item.current {
-    color: #4c536f;
+    color: #2D3142;
   }
   .social__item {
     margin-right: 0;
