--- a/#src/sass/components/_hover.sass
+++ b/#src/sass/components/_hover.sass
@@ -12,7 +12,7 @@
   .first__btn:hover
     padding: 20px 40px
     background-color: darken(#EF8354, 5%)
-    filter: drop-shadow(px 6px 11px rgba($text, 0.7))
+    filter: drop-shadow(0px 6px 11px rgba($text, 0.7))
   .contacts__item:hover img
     transform: scale(1.1)
   .contacts__phone:hover
