adaotive up to 992px for jalouse.html

--- a/#src/sass/components/_roller.sass
+++ b/#src/sass/components/_roller.sass
@@ -72,14 +72,15 @@
     border: 4px solid $text
     flex-shrink: 0
     cursor: pointer
+    margin-top: 5px
     // z-index: 20
     & .roller__btn
       cursor: pointer
 
   &__bottom
     position: absolute
-    bottom: -117px
-    right: 20px
+    bottom: -75px
+    right: 0
     transform: rotate(180deg)
     width: 76px
     height: 76px
