--- a/#src/sass/components/_box.sass
+++ b/#src/sass/components/_box.sass
@@ -13,7 +13,7 @@
     // letter-spacing: 0.06em
     // color: $text
     margin-bottom: 35px
-  &-text
+  &-descr
     position: relative
     @include font(300, 16, 24)
     letter-spacing: 0.06em
