--- a/#src/sass/media/_1200.sass
+++ b/#src/sass/media/_1200.sass
@@ -25,7 +25,8 @@
   .roller__boxes-last
     grid-template-columns: 1fr
     width: 100%
-  .roller__boxes-last
+  .roller__boxes-last,
+  .fabric__boxes-last
     margin-left: 13px
 
 @media ( max-width:1150px )
@@ -37,10 +38,13 @@
   .roller__boxes
     grid-gap: 35px
     height: 462px
-  .roller__boxes-last
+  .roller__boxes-last,
+  .fabric__boxes-last
     height: auto
   .header__ver
     padding: 81px 10px 81px 50px
+  .modal__inner
+    width: 85%
 
 @media ( max-width:1100px )
   .header__container
@@ -53,7 +57,8 @@
     bottom: 68px
   .roller__boxes
     height: 462px
-  .roller__boxes-last
+  .roller__boxes-last,
+  .fabric__boxes-last
     height: auto
 
 @media ( max-width:1050px )
@@ -80,6 +85,7 @@
     margin-bottom: 24px
   .roller__bottom
     bottom: -37px
-  .roller__boxes-last
+  .roller__boxes-last,
+  .fabric__boxes-last
     height: auto
 
