--- a/#src/sass/media/_1300.sass
+++ b/#src/sass/media/_1300.sass
@@ -17,5 +17,6 @@
 @media ( max-width:1250px )
   .header__ver
     padding: 120px 0px 120px 74px
-  .roller__boxes-last
+  .roller__boxes-last,
+  .fabric__boxes-last
     margin-left: 26px
