--- a/#src/sass/media/_480.sass
+++ b/#src/sass/media/_480.sass
@@ -7,3 +7,17 @@
       font-size: 28px
   .first__btn
     font-size: 18px
+
+  .roller__boxes
+    grid-template-rows: (250px, 1fr)
+    grid-gap: 20px
+  .box-img
+    height: 250px
+    width: 107%
+
+  .fabric__boxes
+    height: 250px
+
+  .main-slider
+    width: 85%
+    height: 200px
