--- a/#src/sass/media/_768.sass
+++ b/#src/sass/media/_768.sass
@@ -8,13 +8,14 @@
     top: 0
     left: 0
     width: 100%
-    z-index: 7
+    z-index: 15
     background-color: rgba($bgc, 0.9)
-    filter: drop-shadow(5px 0px 15px rgba($black, 0.7))
+    filter: drop-shadow(0px 10px 15px rgba($black, 0.5))
     &__container
       padding: 0 30px
     &__logo
       height: 40px
+      z-index: 16
     &__lang
       justify-content: flex-end
       margin-top: 25px
@@ -38,7 +39,6 @@
     margin-left: 30px
     width: 50px
     height: 50px
-
     &__logo
       height: 40px
       z-index: 10
@@ -69,5 +69,42 @@
     &__phone
       margin-bottom: 15px
 
+  .box-btns
+    flex-wrap: wrap
+    justify-content: center
+    a
+      margin-bottom: 20px
+  .box-btn
+    width: 85%
+  .box-text
+    padding-top: 20px
+
+  .roller
+    &-roller
+      z-index: 3
+    &-day-night
+      z-index: 4
+    &-rome
+      z-index: 5
+    &-wood
+      z-index: 6
+    &-rollet
+      z-index: 7
+    &-setka
+      z-index: 8
+
+  .modal__inner
+    top: 50%
+    transform: translate(-50%, -50%)
+    height: 90vh
+    padding: 60px 40px 40px
+  .modal__descr
+    font-size: 16px
+  .modal__title
+    font-size: 22px
+
+  .main-slider
+    width: 85%
+    height: 330px
 
 
