--- a/#src/sass/media/_480.sass
+++ b/#src/sass/media/_480.sass
@@ -9,8 +9,12 @@
     font-size: 18px
 
   .roller__boxes
-    grid-template-rows: (250px, 1fr)
+    grid-template-rows: 250px 1fr
     grid-gap: 20px
+
+  .roller__boxes-last
+    grid-template-rows: 1fr
+
   .box-img
     height: 250px
     width: 107%
