--- a/#src/sass/media/_576.sass
+++ b/#src/sass/media/_576.sass
@@ -1,13 +1,15 @@
 @media ( max-width:576px )
   .roller__boxes
     grid-template-columns: 1fr
-    grid-template-rows: (350px, 1fr)
+    grid-template-rows: 350px 1fr
     grid-gap: 20px
   .box-img
     height: 350px
     width: 107%
   .box-text
     padding-top: 0
+  .roller__boxes-last
+    grid-template-rows: 1fr
 
   .fabric__boxes
     height: 350px
