--- a/#src/sass/components/_hover.sass
+++ b/#src/sass/components/_hover.sass
@@ -22,5 +22,6 @@
     // padding: 10px 35px
     background-color: darken($text, 5%)
     filter: drop-shadow(2px 4px 10px rgba($text, 0.4))
-  .modal__close:hover
+  .modal__close:hover,
+  .box-content__close:hover
     transform: rotate(90deg)
