--- a/#src/sass/media/_576.sass
+++ b/#src/sass/media/_576.sass
@@ -8,6 +8,10 @@
     width: 107%
   .box-text
     padding-top: 0
+  .box-content
+    left: 50%
+    &::after
+      left: 50%
   .roller__boxes-last
     grid-template-rows: 1fr
 
@@ -17,3 +21,5 @@
   .main-slider
     width: 85%
     height: 250px
+
+
