--- a/#src/sass/media/_1200.sass
+++ b/#src/sass/media/_1200.sass
@@ -60,6 +60,9 @@
   .roller__boxes-last,
   .fabric__boxes-last
     height: auto
+  .box-title
+    font-size: 34px
+    margin-bottom: 20px
 
 @media ( max-width:1050px )
   .first
